# boomerang

./: .gitignore  Architecture.md  Cargo.toml  README.md
bitcoin_utils/: Cargo.toml
bitcoin_utils/src/: utils.rs
boomlet/: Cargo.toml
boomlet/src/: boomlet.rs  error.rs  lib.rs  setup.rs  withdrawal.rs
cryptography/: Cargo.toml
cryptography/src/: byte_packer.rs  cryptography.rs  lib.rs  private_key.rs  public_key.rs  signature.rs  signed_data.rs  symmetric_ciphertext.rs  symmetric_key.rs
descriptor/: Cargo.toml
descriptor/src/: descriptor.rs
iso/: Cargo.toml
iso/src/: error.rs  iso.rs  lib.rs  setup.rs  withdrawal.rs
niso/: Cargo.toml
niso/src/: error.rs  lib.rs  niso.rs  setup.rs  withdrawal.rs
peer/: Cargo.toml
peer/src/: error.rs  lib.rs  peer.rs  setup.rs  withdrawal.rs
phone/: Cargo.toml
phone/src/: error.rs  lib.rs  phone.rs  setup.rs
poc/: Cargo.toml
poc/src/: lib.rs  main.rs  setup.rs  withdrawal.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  magic.rs
protocol/src/constructs/: approvals.rs  bitcoin_core_auth.rs  boomerang_params.rs  boomerang_params_seed.rs  boomlet_backup_data.rs  boomlet_backup_done.rs  boomlet_backup_request.rs  check_correctness.rs  duress.rs  dynamic_doxing_data.rs  initiator_boomlet_data.rs  mod.rs  passphrase.rs  password.rs  peer_address.rs  peer_id.rs  ping.rs  pong.rs  sar_id.rs  sar_service_fee_payment_info.rs  sar_service_fee_payment_receipt.rs  sar_setup_response.rs  shared_state_backup_done.rs  shared_state_boomerang_params.rs  shared_state_sar_finalization.rs  st_check.rs  static_doxing_data.rs  tor_address.rs  tor_secret_key.rs  tx_approval.rs  tx_commit.rs  wt_boomerang_params_fingerprint.rs  wt_id.rs  wt_ids_collection.rs  wt_peer_id.rs  wt_sar_setup_response.rs  wt_service_fee_payment_info.rs  wt_service_fee_payment_receipt.rs
protocol/src/messages/: message.rs  mod.rs  parcel.rs
protocol/src/messages/setup/: mod.rs
protocol/src/messages/setup/from_boomlet/to_iso/: mod.rs  setup_boomlet_iso_message_1.rs  setup_boomlet_iso_message_2.rs  setup_boomlet_iso_message_3.rs  setup_boomlet_iso_message_4.rs  setup_boomlet_iso_message_5.rs  setup_boomlet_iso_message_6.rs
protocol/src/messages/setup/from_boomlet/to_niso/: mod.rs  setup_boomlet_niso_message_1.rs  setup_boomlet_niso_message_10.rs  setup_boomlet_niso_message_11.rs  setup_boomlet_niso_message_12.rs  setup_boomlet_niso_message_2.rs  setup_boomlet_niso_message_3.rs  setup_boomlet_niso_message_4.rs  setup_boomlet_niso_message_5.rs  setup_boomlet_niso_message_6.rs  setup_boomlet_niso_message_7.rs  setup_boomlet_niso_message_8.rs  setup_boomlet_niso_message_9.rs
protocol/src/messages/setup/from_boomletwo/: mod.rs
protocol/src/messages/setup/from_boomletwo/to_iso/: mod.rs  setup_boomletwo_iso_message_1.rs  setup_boomletwo_iso_message_2.rs
protocol/src/messages/setup/from_iso/: mod.rs
protocol/src/messages/setup/from_iso/to_boomlet/: mod.rs  setup_iso_boomlet_message_1.rs  setup_iso_boomlet_message_2.rs  setup_iso_boomlet_message_3.rs  setup_iso_boomlet_message_4.rs  setup_iso_boomlet_message_5.rs  setup_iso_boomlet_message_6.rs
protocol/src/messages/setup/from_iso/to_boomletwo/: mod.rs  setup_iso_boomletwo_message_1.rs  setup_iso_boomletwo_message_2.rs
protocol/src/messages/setup/from_iso/to_st/: mod.rs  setup_iso_st_message_1.rs  setup_iso_st_message_2.rs  setup_iso_st_message_3.rs
protocol/src/messages/setup/from_iso/to_user/: mod.rs  setup_iso_output_1.rs  setup_iso_output_2.rs  setup_iso_output_3.rs  setup_iso_output_4.rs  setup_iso_output_5.rs
protocol/src/messages/setup/from_niso/: mod.rs
protocol/src/messages/setup/from_niso/to_boomlet/: mod.rs  setup_niso_boomlet_message_1.rs  setup_niso_boomlet_message_10.rs  setup_niso_boomlet_message_11.rs  setup_niso_boomlet_message_12.rs  setup_niso_boomlet_message_2.rs  setup_niso_boomlet_message_3.rs  setup_niso_boomlet_message_4.rs  setup_niso_boomlet_message_5.rs  setup_niso_boomlet_message_6.rs  setup_niso_boomlet_message_7.rs  setup_niso_boomlet_message_8.rs  setup_niso_boomlet_message_9.rs
protocol/src/messages/setup/from_niso/to_niso/: mod.rs  setup_niso_peer_niso_message_1.rs  setup_niso_peer_niso_message_2.rs  setup_niso_peer_niso_message_3.rs  setup_niso_peer_niso_message_4.rs
protocol/src/messages/setup/from_niso/to_sar/: mod.rs  setup_niso_sar_message_1.rs  setup_niso_sar_message_2.rs
protocol/src/messages/setup/from_niso/to_st/: mod.rs  setup_niso_st_message_1.rs  setup_niso_st_message_2.rs
protocol/src/messages/setup/from_niso/to_user/: mod.rs  setup_niso_output_1.rs  setup_niso_output_2.rs  setup_niso_output_3.rs
protocol/src/messages/setup/from_niso/to_wt/: mod.rs  setup_niso_wt_message_1.rs  setup_niso_wt_message_2.rs  setup_niso_wt_message_3.rs
protocol/src/messages/setup/from_phone/: mod.rs
protocol/src/messages/setup/from_phone/to_sar/: mod.rs  setup_phone_sar_message_1.rs  setup_phone_sar_message_2.rs
protocol/src/messages/setup/from_phone/to_user/: mod.rs  setup_phone_output_1.rs  setup_phone_output_2.rs
protocol/src/messages/setup/from_sar/: mod.rs
protocol/src/messages/setup/from_st/: mod.rs
protocol/src/messages/setup/from_user/: mod.rs
protocol/src/messages/setup/from_wt/: mod.rs
protocol/src/messages/withdrawal/: mod.rs
protocol/src/messages/withdrawal/from_boomlet/: mod.rs
protocol/src/messages/withdrawal/from_iso/: mod.rs
protocol/src/messages/withdrawal/from_niso/: mod.rs
protocol/src/messages/withdrawal/from_non_initiator_boomlet/: mod.rs
protocol/src/messages/withdrawal/from_non_initiator_niso/: mod.rs
protocol/src/messages/withdrawal/from_non_initiator_st/: mod.rs
protocol/src/messages/withdrawal/from_sar/: mod.rs
protocol/src/messages/withdrawal/from_st/: mod.rs
protocol/src/messages/withdrawal/from_user/: mod.rs
protocol/src/messages/withdrawal/from_wt/: mod.rs
sar/: Cargo.toml
sar/src/: error.rs  lib.rs  sar.rs  setup.rs  withdrawal.rs
st/: Cargo.toml
st/src/: error.rs  lib.rs  setup.rs  st.rs  withdrawal.rs
wt/: Cargo.toml
wt/src/: error.rs  lib.rs  setup.rs  withdrawal.rs  wt.rs
(+155 files in other folders)
