[package]
name = "bitcoin_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = {path = "../protocol"}
tracing_utils = {path = "../tracing_utils"}
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
miniscript = { version = "12.3.2", features = ["compiler", "serde"] }
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
tracing = "0.1.41"
