[package]
name = "boomlet"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = {path = "../protocol"}
tracing_utils = {path = "../tracing_utils"}
descriptor = {path = "../descriptor"}
bitcoin_utils = {path = "../bitcoin_utils"}
cryptography = {path = "../cryptography"}
bitcoin = "0.32.5"
miniscript = { version = "12.3.2", features = ["compiler", "serde"] }
musig2 = { version = "0.3.1", features = ["serde", "secp256k1"] }
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tracing = "0.1.41"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }
