[package]
name = "cryptography"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing_utils = {path = "../tracing_utils"}
bitcoin = "0.32.5"
musig2 = { version = "0.3.1", features = ["serde", "secp256k1"] }
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
getset = "0.1.5"
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
tracing = "0.1.41"
bincode = { version = "2.0.1", features = ["serde"] }
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
rand = "0.9.2"

[dev-dependencies]
hex = "0.4"
