[package]
name = "iso"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = {path = "../protocol"}
tracing_utils = {path = "../tracing_utils"}
bitcoin_utils = {path = "../bitcoin_utils"}
cryptography = {path = "../cryptography"}
descriptor = {path = "../descriptor"}
bip39 = "2.1.0"
bitcoin = "0.32.5"
miniscript = { version = "12.3.2", features = ["compiler", "serde"] }
musig2 = { version = "0.3.1", features = ["serde", "secp256k1"] }
rand = "0.9.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
tracing = "0.1.41"