[package]
name = "phone"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = {path = "../protocol"}
tracing_utils = {path = "../tracing_utils"}
cryptography = {path = "../cryptography"}
bitcoin = "0.32.5"
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tracing = "0.1.41"