[package]
name = "poc"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing_utils = {path = "../tracing_utils"}
boomlet = {path = "../boomlet"}
iso = {path = "../iso"}
niso = {path = "../niso"}
wt = {path = "../wt"}
sar = {path = "../sar"}
st = {path = "../st"}
peer = {path = "../peer"}
phone = {path = "../phone"}
protocol = {path = "../protocol"}
cryptography = {path = "../cryptography"}
bitcoincore-rpc = "0.19.0"
corepc-node = { version = "0.8.0", features = ["29_0"] }
bip39 = "2.1.0"
bitcoin = "0.32.5"
musig2 = { version = "0.3.1", features = ["serde", "secp256k1"] }
miniscript = { version = "12.3.2", features = ["compiler", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "time", "tracing"] }
