[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing_utils = {path = "../tracing_utils"}
cryptography = {path = "../cryptography"}
bip39 = "2.1.0"
bitcoin = "0.32.5"
miniscript = { version = "12.3.2", features = ["compiler", "serde"] }
musig2 = { version = "0.3.1", features = ["serde", "secp256k1"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
getset = "0.1.5"
bitcoincore-rpc = "0.19.0"
secrecy = { version = "0.10.3", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
tracing = "0.1.41"
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
rand = "0.9.2"
hex = "0.4.3"