[package]
name = "sar"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = {path = "../protocol"}
tracing_utils = {path = "../tracing_utils"}
cryptography = {path = "../cryptography"}
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
tracing = "0.1.41"


[lints.clippy]
eq_op = "allow"